--- a/index.html
+++ b/index.html
@@ -3,19 +3,56 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<title>Nina Carducci Photographe</title>
+	<meta name="description"
+		content="Découvrez l'univers captivant de Nina Carducci, photographe professionnelle à Bordeaux. Spécialisée dans les portraits, mariages, entreprise et événements, Nina capture chaque moment avec une touche artistique unique. Réservez dès maintenant pour immortaliser vos plus beaux souvenirs." />
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<meta property="og:title" content="Nina Carducci - Photographe Professionnelle à Bordeaux" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://ninacarducci.github.io" />
+	<meta property="og:image" content="https://ninacarducci.github.io/assets/images/nina.png" />
+	<meta property="og:description"
+		content="Explorez le travail de Nina Carducci, photographe professionnelle à Bordeaux. Spécialisée dans les portraits, mariages, entreprise et événements, elle capture des moments inoubliables avec une touche artistique unique." />
+	<meta property="og:site_name" content="Nina Carducci Photographe" />
+	<meta property="og:locale" content="fr_FR" />
+
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Nina Carducci - Photographe Professionnelle à Bordeaux" />
+	<meta name="twitter:description"
+		content="Découvrez le travail artistique de Nina Carducci, photographe à Bordeaux, spécialisée dans les portraits, mariages, entreprise et événements. Capturez vos moments les plus précieux avec élégance." />
+	<meta name="twitter:image" content="https://ninacarducci.github.io/assets/images/nina.png" />
+	<meta name="twitter:site" content="@Nina_Carducci" />
+
+
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nom de votre entreprise",
+		  "address": {
+		    "@type": "PostalAddress",
+		    "streetAddress": "68 avenue Alsace-Lorraine",
+		    "addressLocality": "Bordeaux",
+		    "postalCode": "33200",
+		    "addressCountry": "FR"
+		  },
+		  "telephone": "+33-5-56-67-78-89",
+		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "url": "https://ninacarducci.github.io",
+		}
+		</script>
+
 </head>
 
 <body>
