--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		{
 		  "@context": "https://schema.org",
 		  "@type": "LocalBusiness",
-		  "name": "Nom de votre entreprise",
+		  "name": "Nina Carducci",
 		  "address": {
 		    "@type": "PostalAddress",
 		    "streetAddress": "68 avenue Alsace-Lorraine",
@@ -49,7 +49,7 @@
 		  },
 		  "telephone": "+33-5-56-67-78-89",
 		  "openingHours": "Mo-Fr 10:00-19:00",
-		  "url": "https://ninacarducci.github.io",
+		  "url": "https://ninacarducci.github.io"
 		}
 		</script>
 
