--- a/index.html
+++ b/index.html
@@ -83,15 +83,16 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
-							class="d-block w-100" alt="carousel_1">
+							class="d-block w-100" alt="Homme en costard traversant la route">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
-							class="d-block w-100" alt="carousel_2">
+							class="d-block w-100" alt="2 hommes s'ambiançant lors d'un concert">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
-							class="d-block w-100" alt="carousel_3">
+							class="d-block w-100"
+							alt="Photo d'un homme et d'une femme marié s'embrassant">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -108,7 +109,7 @@
 		</section>
 		<section id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="image_nina">
+				<img src="./assets/images/nina.webp" alt="image de Nina Carducci">
 			</div>
 			<div id="about-me">
 				<h1 class="about-me__title">A propos de moi</h1>
@@ -136,31 +137,31 @@
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-						alt="image_concert_1" />
+						alt="Photo d'une foule lors d'un concert" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
-						alt="image_entreprise_1" />
+						alt="Homme se tenant de face habillé en costard" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
-						alt="image_entreprise_2" />
+						alt="2 femmes souriantes lors d'une reunion" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
-						alt="image_mariage_1" />
+						alt="2 personnes se tenant les 2 mains" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
-						alt="image_portrait_1" />
+						alt="un homme fermant les yeux eblouit par le soleil" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
-						alt="image_mariage_2" />
+						alt="un homme et une femme marié marchant main dans la main" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
-						alt="image_portrait_2" />
+						alt="une femme se tenant face à un grillage" />
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
-						alt="image_concert_2" />
+						alt="un homme chantant lors d'un concert" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
-						alt="image_entreprise_3" />
+						alt="une femme souriante travaillant sur son ordinateur" />
 				</div>
 			</div>
 			<div class="quote">
@@ -247,7 +248,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webp" alt="image_caméra">
+					<img src="./assets/images/camera.webp" alt="image d'une caméra">
 				</div>
 			</div>
 		</section>
